--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Pokemon Tracker</string>
     <string name="page_fragment_label">Pokemons</string>
     <string name="details_fragment_label">Details</string>
+    <string name="pokemonNameDummy">Bulbasaur</string>
 </resources>
